# makima

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml
.claude/skills/implement-task/: SKILL.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  state.rs
crates/api/src/assets/: dto.rs  handlers.rs  mod.rs  service.rs
crates/api/src/auth/: dto.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  service.rs  tokens.rs
crates/api/src/import/: dto.rs  handlers.rs  mod.rs
crates/api/src/portfolios/: dto.rs  handlers.rs  mod.rs  service.rs
crates/api/src/positions/: dto.rs  handlers.rs  mod.rs
crates/api/src/transactions/: dto.rs  handlers.rs  mod.rs
crates/api/src/users/: dto.rs  handlers.rs  mod.rs
crates/api/tests/: assets.rs  auth.rs  import.rs  portfolios.rs  positions.rs  transactions.rs  users.rs
crates/api/tests/support/: mod.rs
crates/application/: Cargo.toml
crates/application/src/: analytics.rs  assets.rs  auth.rs  import.rs  lib.rs  portfolios.rs  positions.rs  prices.rs  transactions.rs  users.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs
crates/db/src/repositories/: asset_repo.rs  broker_import_repo.rs  exchange_rate_repo.rs  mod.rs  portfolio_repo.rs  position_repo.rs  price_repo.rs  refresh_token_repo.rs  transaction_repo.rs  user_repo.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs  traits.rs
crates/domain/src/logic/: allocation.rs  gain_loss.rs  mod.rs  position.rs
crates/domain/src/models/: asset.rs  broker_import.rs  exchange_rate.rs  mod.rs  pagination.rs  portfolio.rs  position.rs  price.rs  refresh_token.rs  transaction.rs  user.rs
crates/importer/: Cargo.toml
crates/importer/fixtures/: bgsaxo_sample.xlsx  fineco_sample.xls
crates/importer/src/: bgsaxo.rs  fineco.rs  lib.rs
crates/price-fetcher/: Cargo.toml
crates/price-fetcher/src/: backfill.rs  exchange.rs  job.rs  lib.rs  openfigi.rs  yahoo.rs
docs/: makima-mvp-spec.md  task-workflow.md
http/: assets.http  auth.http  health.http  import.http  portfolios.http  positions.http  transactions.http  users.http
migrations/: 0001_initial.sql  0002_users_and_refresh_tokens.sql  0003_portfolios.sql  0004_assets.sql  0005_transactions.sql  0006_price_history.sql  0007_exchange_rates.sql
tasks/phase-0/: 0.1-workspace-scaffolding.md  0.2-docker-postgresql.md  0.3-axum-server-middleware.md  0.4-openapi-swagger.md
tasks/phase-1/: 1.1-domain-models.md  1.2-traits-domain-logic.md
tasks/phase-2/: 2.0-api-integration-test-harness.md  2.1-auth-registration-login.md  2.10-analytics.md  2.1a-auth-integration-tests.md  2.2-auth-middleware.md  2.2a-authenticated-user-integration-tests.md  2.3-portfolios-crud.md  2.3a-portfolios-integration-tests.md  2.4-assets-crud-openfigi.md  2.5-transactions-crud.md  2.6-positions.md  2.7-prices-yahoo-finance.md  2.8-exchange-rates.md  2.9-broker-import.md
tasks/phase-3/: 3.1-openapi-review.md  3.2-pagination-error-review.md  3.3-readme-documentation.md
