[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["anacromaniac"]
license = "MIT"

[workspace.dependencies]
# Domain types (shared)
domain = { path = "crates/domain" }

# Database layer
db = { path = "crates/db" }

# API layer
api = { path = "crates/api" }

# Application layer
application = { path = "crates/application" }

# Feature crates
importer = { path = "crates/importer" }
price-fetcher = { path = "crates/price-fetcher" }

# External dependencies (latest versions from Context7)
uuid = { version = "1.18", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
garde = { version = "0.22", features = ["derive", "email"] }

# Auth dependencies
argon2 = "0.5"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Async traits (required for dyn-compatible async trait objects)
async-trait = "0.1"

# Logging
tracing = "0.1"

# HTTP clients
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
