[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
domain.workspace = true
db.workspace = true

# External dependencies
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
garde.workspace = true

# Database
sqlx.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Async runtime
tokio.workspace = true

# HTTP framework
axum = { version = "0.8", features = ["macros"] }

# HTTP middleware
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "compression-deflate", "cors", "request-id", "timeout", "limit", "util"] }

# OpenAPI
utoipa = { version = "5.4", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Auth
argon2.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
rand.workspace = true

# Structured logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
