[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
application.workspace = true
domain.workspace = true
db.workspace = true
importer.workspace = true
price-fetcher.workspace = true

# External dependencies
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
garde.workspace = true
async-trait.workspace = true

# Database
sqlx.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Async runtime
tokio.workspace = true

# HTTP framework
axum = { version = "0.8", features = ["macros", "multipart"] }

# HTTP middleware
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "compression-deflate", "cors", "request-id", "timeout", "limit", "util"] }

# OpenAPI
utoipa = { version = "5.4", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Auth
jsonwebtoken.workspace = true

# Structured logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
calamine = "0.34"
csv = "1.4"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
