[package]
name = "domain"
version.workspace = true
edition.workspace = true

[dependencies]
# External dependencies
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
garde.workspace = true
async-trait.workspace = true
