[package]
name = "price-fetcher"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
domain.workspace = true

# External dependencies
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
garde.workspace = true
